# numerical-analysis

./: .gitignore  Convex-Optimization-Course.md  Discrete-Optimization-Course.md  Discrete-Optimization-Course.tex  Foundations-Applied-Mathematics.md  Operations-Research-Examples.ipynb  Operations-Research-Winston.ipynb  Probability.ipynb  README.md  Real-World-Problem-Definitions.md  billing.py  hello.py  manim_tests.ipynb  pyproject.toml  requirements.txt  setup.ps1
applications/: billing.py  billing.py.6e349528139fc207c681db643a4525c4.tmp  test_billing.py
ortools_examples/: n_queens.py
ortools_examples/custom/: dummy_example.py  maximize_volume_in_open_box_cut.py  send_more_money.py  stable_marriages.py
ortools_examples/utils/: debug_infeasible_model.py
pandoc-templates/: eisvogel.tex
refs/: math-as-code-python.md
scripts/: pandoc-eisvogel.ps1  pandoc.ps1
statistics/: Probability.ipynb  Stats-Rethinking-Notes.ipynb
