[project]
name = "numerical-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipyevents>=2.0.2",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.6",
    "ipywidgets>=8.1.5",
    "manim>=0.19.0",
    "matplotlib>=3.10.0",
    "mayavi>=4.8.2",
    "notebook>=7.3.2",
    "numpy>=2.2.2",
    "openpyxl>=3.1.5",
    "ortools>=9.11.4210",
    "pandas>=2.2.3",
    "polars>=1.20.0",
    "pyomo>=6.8.2",
    "pytest>=8.3.4",
    "pytest-repeat>=0.9.3",
    "sympy>=1.13.3",
    "xlsxwriter>=3.2.1",
]
